force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/Form_Template__c.object-meta.xml
<CustomObject>
    <label>Form Template</label>
    <pluralLabel>Form Templates</pluralLabel>
    <nameField>
        <label>Form Template Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores AI-generated form templates, extracted metadata, and publication status</description>
</CustomObject>