force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>Agency/Department</description>
    <label>Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>