force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/AI_Extracted_JSON__c.field-meta.xml
<CustomField>
    <fullName>AI_Extracted_JSON__c</fullName>
    <description>Raw JSON returned by AI extraction</description>
    <label>AI Extracted JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>