force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>Overall AI confidence score (0-1)</description>
    <label>Confidence Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>