force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Field_Mapping_JSON__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_JSON__c</fullName>
    <description>Reviewed field mappings JSON</description>
    <label>Field Mapping JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>