force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_Number__c</fullName>
    <description>Official form number/ID (e.g., Form 3160-3)</description>
    <label>Form Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>