force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/HTML_Template__c.field-meta.xml
<CustomField>
    <fullName>HTML_Template__c</fullName>
    <description>Generated HTML template for preview or Experience Cloud embedding</description>
    <label>HTML Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>