force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Legal_Citations__c.field-meta.xml
<CustomField>
    <fullName>Legal_Citations__c</fullName>
    <description>Legal citations/references found on form</description>
    <label>Legal Citations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>