force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/LWC_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>LWC_Component_Name__c</fullName>
    <description>Name of generated/assigned LWC for rendering</description>
    <label>LWC Component Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>