force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Original_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_File_Name__c</fullName>
    <description>Uploaded file name</description>
    <label>Original File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>