force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Original_File_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_File_Type__c</fullName>
    <description>Uploaded file type/extension</description>
    <label>Original File Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>