force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Original_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Original_Image_URL__c</fullName>
    <description>Direct URL to preview the uploaded file</description>
    <label>Original Image URL</label>
    <type>Url</type>
</CustomField>