force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Original_Image_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Image_Version_Id__c</fullName>
    <description>Stores the ContentVersion Id of the uploaded form image/PDF</description>
    <label>Original Image Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>