force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Date__c</fullName>
    <description>Form revision date</description>
    <label>Revision Date</label>
    <type>Date</type>
</CustomField>