force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Template_Title__c.field-meta.xml
<CustomField>
    <fullName>Template_Title__c</fullName>
    <description>Human-readable form title</description>
    <label>Template Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>