force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Template__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Template version</description>
    <label>Version</label>
    <precision>3</precision>
    <scale>1</scale>
    <defaultValue>1.0</defaultValue>
    <type>Number</type>
</CustomField>